# WispForMaya

./: .gitignore  .gitmodules  .gitmodules.orig  CMakeLists.txt  Doxyfile  Jenkinsfile  Jenskinsfile  LICENSE  README.md  install.bat  wisp-template.mod
.github/ISSUE_TEMPLATE/: bug_report.md
module/: README.txt  wisp-template.mod
module/wisp/scripts/: initialize_wisp_ui.mel  switch_rendering_pipeline.mel  userSetup.mel
readme_media/: environment_variable.png~
resources/shaders/: deferred_composition.hlsl  lighting.hlsl
src/: Constants.hpp  Defines.hpp  Settings.hpp  main.cpp
src/miscellaneous/: Functions.cpp  Functions.hpp  Settings.hpp  func.cpp  functions.cpp  functions.hpp  maya_popup.cpp  maya_popup.hpp  render_settings.cpp  render_settings.hpp  settings.hpp
src/plugin/: AutodeskSample.cpp  AutodeskSample.hpp  CallbackManager.cpp  CallbackManager.hpp  FrameGraphManager.cpp  FrameGraphManager.hpp  PluginMain.cpp  PluginMain.hpp  QuadRendererOverride.cpp  QuadRendererOverride.hpp  UIOverride.cpp  UIOverride.hpp  ViewportRendererOverride.cpp  ViewportRendererOverride.hpp  callback_manager.cpp  callback_manager.hpp  frame_graph_manager.cpp  plugin_main.cpp  plugin_main.hpp  renderer.hpp  viewport_renderer.cpp  viewport_renderer.hpp  viewport_renderer_override.cpp  viewport_renderer_override.hpp
src/plugin/framegraph/: frame_graph_manager.cpp  frame_graph_manager.hpp
src/plugin/overrides/: QuadRendererOverride.cpp  QuadRendererOverride.hpp  UIOverride.cpp  UIOverride.hpp  ViewportRendererOverride.cpp  ViewportRendererOverride.hpp  quad_renderer_override.cpp  quad_renderer_override.hpp  ui_override.cpp  ui_override.hpp  viewport_renderer_override.cpp  viewport_renderer_override.hpp
src/plugin/parsers/: camera_parser.cpp  camera_parser.hpp  light_parser.cpp  light_parser.hpp  material_parser.cpp  material_parser.hpp  model_parser.cpp  model_parser.hpp  scene_graph_parser.cpp  scene_graph_parser.hpp  shader_structs.hpp
src/plugin/render_operations/: gizmo_render_operation.cpp  gizmo_render_operation.hpp  renderer_copy_operation.cpp  renderer_copy_operation.hpp  renderer_draw_operation.cpp  renderer_draw_operation.hpp  renderer_update_operation.cpp  renderer_update_operation.hpp  screen_render_operation.cpp  screen_render_operation.hpp
src/plugin/renderer/: Renderer.cpp  Renderer.hpp  RendererMain.cpp  RendererMain.hpp  material_manager.cpp  material_manager.hpp  model_manager.cpp  model_manager.hpp  render_pipeline_select_command.cpp  render_pipeline_select_command.hpp  renderer.cpp  renderer.hpp  texture_manager.cpp  texture_manager.hpp
src/plugin/scenegraph/: ScenegraphParser.cpp  ScenegraphParser.hpp  scene_graph_parser.cpp
src/wisp_render_tasks/: d3d12_depth_data_readback.hpp  d3d12_pixel_data_readback.hpp
test/: test_main.cpp
